# challenges

./: .gitignore  LICENSE  README.md  pyproject.toml
2024/12/15/: challenge.md  test_cases.json
2024/12/27/: challenge.md  test_cases.json
2025/3/23/: challenge.md  test_cases.json
weekday/: challenge_176.md  challenge_177.md  challenge_178.md  challenge_179.md  challenge_180.md  challenge_181.md  challenge_182.md  challenge_183.md  challenge_184.md  challenge_185.md  challenge_186.md  challenge_187.md  challenge_188.md  challenge_189.md  challenge_190.md  challenge_191.md  challenge_192.md  challenge_193.md  challenge_194.md  challenge_195.md  challenge_196.md  challenge_197.md  challenge_198.md  challenge_199.md  challenge_200.md  challenge_201.md  challenge_202.md  challenge_203.md  challenge_204.md  challenge_205.md  challenge_206.md  challenge_207.md  challenge_208.md  challenge_209.md  challenge_210.md  challenge_211.md  challenge_212.md  challenge_213.md  challenge_214.md  challenge_215.md  (+998 more)
