[tool.poetry]
name = "bpy-challenges"
version = "0.1.0"
description = ""
authors = ["Zech Zimmerman <hi@zech.codes>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
